--- a/public/css/front_css/custom.css
+++ b/public/css/front_css/custom.css
@@ -102,7 +102,7 @@
     }
 
 .tabelaPrincipal, .tabelaConsultas, .stdTable {
-    width: 100%;
+    /* max-width: 90%; */
     border: 1px solid #DDDDDD;
     box-shadow: 0 3px 5px RGBA(0,0,0,0.05),0 1px 0px RGBA(0,0,0,0.1);
     margin-top: 10px;
