--- a/public/css/front_css/style.css
+++ b/public/css/front_css/style.css
@@ -138,8 +138,8 @@
  .obraCompleta h2 		{color: #4b443d; position: relative; top: -150px}
  .obraCompleta .underlineTitulo 	{background: #fff;position: relative;top: -150px}
  .obraCompleta .categoria {margin:0 auto; width: 100%; margin-top: 100px }
- .obraCompleta .obra 	{background: #69788d;height: 154px;margin-right: 0px;margin-bottom: 35px;}	
- .obraCompleta .obra a 	{width: 100%;  color:#08284a; font-weight: 600;  font-size: 20px; display: block; height: 100%; text-transform: uppercase; padding-top: 63px; text-align: center;}
+ .obraCompleta .obra 	{background: #69788d;height: 154px;margin-right: 30px;margin-bottom: 35px;float: left;width: 21%;box-shadow: 6px 8px 13px #667a98a6;border-radius: 5%;}	
+ .obraCompleta .obra a 	{width: 100%;  color:#08284a; font-weight: 600;  font-size: 20px; display: block; height: 70%; text-transform: uppercase; padding-top: 63px; text-align: center;}
  .obraCompleta .obra a:hover {text-decoration: none; font-size: 23px; color: #fff; background: #18324e;-webkit-transition:0.2s ease-out;-moz-transition:0.2s ease-out;-o-transition:0.2s ease-out;transition:0.2s ease-out;}
  .obraCompleta .obras 	{
     position: relative;
