--- a/public/css/front_css/style.css
+++ b/public/css/front_css/style.css
@@ -184,9 +184,11 @@
  .downloadObra a:hover 					{background: #b5850d; color: #fff !important} 
  .anoObra 								{color: #b5850d}
  
+ #f {
+	-webkit-mask-image: linear-gradient(to top, #a5353500, #b51414 100%);
+}
  
- 
- 
+/*  
  section.cronologia 	    {background: #fff; height: auto }
  .cronologia h2 			{color: #4b443d; padding-top: 160px}
  .cronologia .underlineTitulo 	{background: #d6b79e}
@@ -203,7 +205,7 @@
  .cronologiaLista .item img {opacity: 0.1; position: relative;top: -300px}
  .cronologiaLista .item .link {position: relative; display: block; z-index: 1; text-align: center;}
  .cronologiaLista .item a 	 {font-size: 30px; text-decoration: none; color: #000; font-weight:bold; width: 100%; display: block; height: 300px; padding-top: 75px  }
- 
+  */
  section.bibliografia    					{background: #d3b49d; height: auto; margin-top: 200px }
  .bibliografia h2 							{color: #000; }
  .bibliografia .underlineTitulo 				{background: #fff}
