Alter from layout responsive

--- a/public/css/front_css/style.css
+++ b/public/css/front_css/style.css
@@ -132,7 +132,7 @@
      background: #bec9cf;
      height: auto;
      margin-bottom: 51px;
-     /* margin-top: -180px; */
+     margin-right: 7%;
 }
 
  .obraCompleta h2 		{color: #4b443d; position: relative; top: -150px}
