--- a/public/css/front_css/custom.css
+++ b/public/css/front_css/custom.css
@@ -119,6 +119,7 @@
     position: relative;
     border-top: none;
     margin-top: 15px;
+    margin-right: 5%;
 }
 
     .tabelaConsultas.noFooter {
