--- a/public/css/front_css/style.css
+++ b/public/css/front_css/style.css
@@ -1,3 +1,5 @@
+
+ 
  /* EFEITOS */
  .efeito 					{ transition: all 0.2s ease;}
  .efeito:hover     			{ -webkit-transform: scale(0.9); -ms-transform: scale(0.9)); transform: scale(0.9));}
@@ -132,11 +134,9 @@
      background: #bec9cf;
      height: auto;
      margin-bottom: 51px;
-<<<<<<< HEAD
      margin-right: 5%;
-=======
+
      margin-right: 7%;
->>>>>>> d28c1df91a851efcda10e14823f38b0ecfe565fc
 }
 
  .obraCompleta h2 		{color: #4b443d; position: relative; top: -150px}
@@ -144,7 +144,17 @@
  .obraCompleta .categoria {margin:0 auto; width: 100%; margin-top: 100px }
  .obraCompleta .obra 	{background: #69788d;height: 140px;margin-right: 2%;margin-bottom: 34px;float: left;width: 31%;box-shadow: 6px 8px 13px #667a98a6;border-radius: 5%;}	
  .obraCompleta .obra a 	{border-radius: 4% ;color:#08284a;font-weight: 600;font-size: 15px;display: block;height: 63%;text-transform: uppercase;padding-top: 60px;text-align: center;}
- .obraCompleta .obra a:hover {text-decoration: none;font-size: 19px;color: #fff;background: #18324e;-webkit-transition:0.2s ease-out;-moz-transition:0.2s ease-out;-o-transition:0.2s ease-out;transition:0.2s ease-out;}
+ .obraCompleta .obra a:hover {
+     text-decoration: none;
+     font-size: 19px;
+     color: #fff;
+     background: #20437373;
+     -webkit-transition:0.2s ease-out;
+     -moz-transition:0.2s ease-out;
+     -o-transition:0.2s ease-out;
+     transition:0.2s ease-out;
+}
+
  .obraCompleta .obras 	{
     position: relative;
     /* top: -140px; */  
